# pdr-programming

./: .gitignore  .merlin  Makefile  _oasis  pdr-programming.descr  pdr-programming.opam
doc/: .gitignore
doc/continuation_transform_spec/: main.tex
src/: dune  jbuild
src/a_normalization/: a_normalizer.ml  a_normalizer.mli  dune
src/continuation_extensions/: continuation_fragment_constructors.ml  continuation_fragment_types.ml  continuation_fragment_types.mli  continuation_transformer.ml  continuation_transformer.mli  continuation_transformer_monad.ml  continuation_transformer_monad.mli  dune  fragment_constructors.ml  fragment_constructors_utils.ml  fragment_pp.ml  fragment_types.ml  fragment_types.mli  fragment_utils.ml  jbuild  transformer.ml  transformer.mli  transformer_monad.ml  transformer_monad.mli
src/generation/: continuation_code.ml  continuation_types.ml  continuation_types.mli  dune  flow_analysis.ml  flow_analysis.mli  fragment_uid_graph.ml  fragment_uid_graph.mli
src/pds-programming/: continuation_transform.ml  continuation_types.ml  ocaml_a_translator.ml  ocaml_ast_utils.ml  ocaml_ast_with_ops.ml  ocaml_ast_without_location.ml  pds_transform.ml
src/ppx/: dune  main.ml  mapper.ml
src/transformation/: continuation_types.ml  dune  flow_analysis.ml
src/utils/: ast_utils.ml  big_variant.ml  big_variant.mli  dune  type_utils.ml  utils.ml  variable_utils.ml  variable_utils.mli
test/: dune  jbuild  ppx_test.ml  sandbox.ml  sandbox_crud.ml  test.ml  test_a_normalization.ml  test_a_translator.ml  test_big_variant.ml  test_continuation_transform.ml  test_continuation_transformer.ml  test_declarations.ml  test_flow_analysis.ml  test_ocaml_ast_utils.ml  test_utils.ml
