(alias
  (name runtest)
  (deps test.exe)
  (action (run ./test.exe))
)

(executable
  (name test)
  (modules
    Test
    Test_a_normalization
    Test_continuation_transformer
    Test_declarations
    Test_flow_analysis
    Test_utils
  )
  (libraries
    oUnit
    pdr-programming.a-normalization
    pdr-programming.continuation-extensions
    pdr-programming.transformation
    pds-reachability
  )
  (preprocess
    (pps
      ppx_deriving.std
      ppx_tools_versioned.metaquot_406
    )
  )
  (flags (:standard (-w -39)))
)

(executable
  (name sandbox)
  (modules
    Sandbox
  )
  (libraries
    oUnit
    pdr-programming.a-normalization
    pdr-programming.continuation-extensions
    pdr-programming.transformation
    pds-reachability
  )
  (preprocess
    (pps
      ppx_deriving.std
      ppx_tools_versioned.metaquot_406
    )
  )
  (flags (:standard (-w -39)))
)
