(alias
  (name runtest)
  (deps test.exe ppx_test.exe)
  (action (run ./test.exe))
)

(executable
  (name test)
  (modules
    Test
    Test_big_variant
    Test_continuation_transformer
    Test_declarations
    Test_flow_analysis
    Test_utils
  )
  (libraries
    oUnit
    pdr-programming.continuation-extensions
    pdr-programming.generation
    pds-reachability
  )
  (preprocess
    (pps
      ppx_deriving.std
      ppx_tools_versioned.metaquot_406
    )
  )
  (flags (:standard (-w -39)))
)

(executable
  (name sandbox)
  (modules
    Sandbox
    Sandbox_crud
  )
  (libraries
    oUnit
    pdr-programming.continuation-extensions
    pdr-programming.generation
    pds-reachability
  )
  (preprocess
    (pps
      ppx_deriving.std
      ppx_tools_versioned.metaquot_406
    )
  )
  (flags (:standard (-w -39)))
)

(executable
  (name ppx_test)
  (modules
    Ppx_test
  )
  (libraries
    jhupllib
  )
  (preprocess
    (pps
      ocaml-monadic
      pdr-programming.ppx
    )
  )
  (flags
    (:standard -w -39) ;because we generate unnecessary rec flags
  )
)
