(library
  (name pdr_programming_a_normalization)
  (public_name pdr-programming.a-normalization)
  (synopsis "An internal A-normalization tool for OCaml")
  (libraries
    batteries
    compiler-libs.common
    jhupllib
    ocaml-migrate-parsetree
    pdr-programming.utils
  )
  (preprocess
    (pps
      ppx_tools_versioned.metaquot_406
    )
  )
)
