(library
  (name pdr_programming_generation)
  (public_name pdr-programming.generation)
  (synopsis "Code generation tools for the PDR programming library.")
  (libraries
    batteries
    compiler-libs.common
    jhupllib
    monadlib
    pdr-programming.continuation-extensions
    pdr-programming.utils
  )
  (preprocess
    (pps
      ocaml-monadic
      ppx_deriving.std
      ppx_tools_versioned.metaquot_406
    )
  )
)
